--- a/Xcelerate/Views/Account/UserProfile/Profile.cshtml
+++ b/Xcelerate/Views/Account/UserProfile/Profile.cshtml
@@ -38,7 +38,7 @@
 				@foreach (var message in Model.Messages)
 				{
 					<li class="messages-li">
-						<h2 class="message-title">@message.Title</h2>
+						<h2 style="color: @message.TitleColor" class="message-title">@message.Title</h2>
 						<p class="message-content">@message.Content</p>
 					</li>
 				}
