Added counter for unread messages so the user can go and see whats new.

--- a/Xcelerate/Views/Account/UserProfile/Profile.cshtml
+++ b/Xcelerate/Views/Account/UserProfile/Profile.cshtml
@@ -40,6 +40,7 @@
 					<li class="messages-li">
 						<h2 style="color: @message.TitleColor" class="message-title">@message.Title</h2>
 						<p class="message-content">@message.Content</p>
+						<h3 class="timestamp" style="color: @message.TitleColor">@message.CreatedTime</h3>
 					</li>
 				}
 			</ul>
