--- a/Xcelerate/Views/Shared/_Layout.cshtml
+++ b/Xcelerate/Views/Shared/_Layout.cshtml
@@ -53,7 +53,8 @@
 							 alt="Icon Description" />
 						<li class="logout-state"><a asp-area="" asp-controller="Account" asp-action="Logout" class="logout-button-submit">LOG OUT</a></li>
 						<li class="logout-state"><a asp-area="" asp-controller="UserCars" asp-action="Index" class="logout-button-submit">MY CARS</a></li>
-						<li class="logout-state"><a asp-area="" asp-controller="Account" asp-action="Profile" class="logout-button-submit">ACCOUNT</a></li>
+						<partial name="_DashboardButtonForNotification" model="ViewBag.UnreadMessageCount">
+						</partial>
 						<li class="logout-state"><a asp-area="Admin" asp-controller="Home" asp-action="Index" class="logout-button-submit">ADMIN PANEL</a></li>
 					</ul>
 				}
@@ -65,7 +66,9 @@
 							 alt="Icon Description" />
 						<li class="logout-state"><a asp-area="" asp-controller="Account" asp-action="Logout" class="logout-button-submit">LOG OUT</a></li>
 						<li class="logout-state"><a asp-area="" asp-controller="UserCars" asp-action="Index" class="logout-button-submit">MY CARS</a></li>
-						<li class="logout-state"><a asp-area="" asp-controller="Account" asp-action="Profile" class="logout-button-submit">ACCOUNT</a></li>
+
+						<partial name="_DashboardButtonForNotification" model="ViewBag.UnreadMessageCount">
+						</partial>
 					</ul>
 				}
 			}
