--- a/Xcelerate/Views/Ad/Information.cshtml
+++ b/Xcelerate/Views/Ad/Information.cshtml
@@ -35,6 +35,16 @@
 							@Html.AntiForgeryToken()
 							<button type="submit" class="buy-button">BUY</button>
 						</form>
+
+						<form asp-controller="Ad" asp-action="StartChat" method="get">
+							@Html.AntiForgeryToken()
+							<input type="hidden" name="otherUserId" value="@Model.UserId" />
+							<input type="hidden" name="AdId" value="@Model.AdId" />
+							<input type="hidden" name="carId" value="@ViewBag.CarId" />
+							<button type="submit" class="start-chat-button">Start Chat</button>
+						</form>
+
+
 					}
 
 					<form asp-area="" asp-controller="Ad" asp-action="Index" method="get">
